# whurl

./: '  .gitignore  .gitkeep  README.md  app.py  config.yaml  data_files.txt  measurement_list.csv  pyproject.toml  sos_calls.py  test.py  urls.csv
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: httpx-performance-integration-tests.md  whurl-v1-release-checklist.md
docs/: CACHE_ARCHITECTURE.md  PERFORMANCE_TESTING.md  TESTING.md  TESTING_STRATEGY.md  TEST_MATRIX.md
hurl/: __init__.py  client.py  collection_list.py  components.py  data_table.py  describe_feature_type.py  ensemble_stats.py  exceptions.py  get_bore.py  get_capabilities.py  get_comments.py  get_data.py  get_feature.py  get_observation.py  get_sample.py  measurement_list.py  recent_data_table.py  sample_count.py  site_info.py  site_list.py  status.py  threshold_info.py  time_range.py  utils.py
hurl/models/: __init__.py  collection_list.py  components.py  data_table.py  ensemble_stats.py  get_bore.py  get_capabilities.py  get_comments.py  get_data.py  get_feature.py  get_observation.py  get_sample.py  measurement_list.py  recent_data_table.py  request_parameters.py  sample_count.py  site_info.py  site_list.py  status.py  threshold_info.py  time_range.py
hurl/schemas/: mixins.py
issues/: 14.md  advanced-test-scheme-onboarding.md
pages/: render_collection_list.py  render_get_data.py  render_measurement_list.py  render_site_info.py  render_site_list.py  render_threshold_info.py
scripts/: all_measurements.json  crosscheck_bores.py  crosscheck_wq_entries.py  param_lookup_DB1.json  param_lookup_DB2.json  parameter_results_db1.json  parameter_results_db2.json  processed_sites.csv  results.csv  results_after.csv  results_before.csv  wq_crosscheck_results_db1.csv  wq_crosscheck_results_db2.csv
tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_client_cache.py  test_collection_list.py  test_data_sources.py  test_data_table.py  test_ensemble_stats.py  test_fixtures.py  test_get_bore.py  test_get_comments.py  test_get_data.py  test_get_feature.py  test_get_observation.py  test_get_sample.py  test_measurement_list.py  test_recent_data_table.py  test_request_property.py  test_sample_count.py  test_site_info.py  test_site_list.py  test_threshold_info.py  test_time_range.py  test_utils.py
tests/fixture_cache/: .gitignore
tests/fixtures/: measurement_list_multi_response.xml
tests/performance/: __init__.py  local_server.py  (+4 more)
whurl/: __init__.py  cache.py  client.py  exceptions.py  utils.py
(+99 files in other folders)
