[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name="hurl"
version="0.1.0"

[tool.setuptools]
packages = ["hurl"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect as '-m \"not slow\"')",
  "remote: marks tests as remote (deselect as '-m \"not remote\"')",
  "update: updates the api response data cache (deselect as '-m \"not update\"')",
]
