[project]
name = "hurl"
version = "0.1.0"
description = "Python API wrapper for Hilltop Server"
authors = [
    {name = "nicmostert",email = "nicolas.mostert@horizons.govt.nz"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.0,<4.0.0)",
    "pytest-httpx (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "xmltodict (>=1.0.0,<2.0.0)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect as '-m \"not slow\"')",
  "remote: marks tests as remote (deselect as '-m \"not remote\"')",
  "unit: marks tests as unit tests (deselect as '-m \"not unit\"')",
  "integration: marks tests as integration tests (deselect as '-m \"not integration\"')",
  "performance: marks tests as performance tests (deselect as '-m \"not performance\"')",
]
